Move code generation to client side