@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.Resource;
 import org.eclipse.lsp4j.CodeAction;
 import org.eclipse.lsp4j.CodeActionKind;
@@ -15,40 +14,39 @@ import org.eclipse.lsp4j.TextEdit;
 import org.eclipse.lsp4j.WorkspaceEdit;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 import org.eclipse.xtext.ide.server.Document;
-import org.eclipse.xtext.ide.server.codeActions.ICodeActionService2;
+import org.eclipse.xtext.ide.server.codeActions.QuickFixCodeActionService;
+import org.farhan.dsl.asciidoc.validation.AsciiDocValidator;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.eclipse.lsp4j.Range;
 import org.eclipse.lsp4j.Position;
 
-public class MyDslCodeActionService implements ICodeActionService2 {
+public class MyDslCodeActionService extends QuickFixCodeActionService {
 
-    // Replace with the actual value of INVALID_NAME from your validator
-    private static final String INVALID_NAME = "INVALID_NAME";
+    private static final Logger logger = LoggerFactory.getLogger(MyDslCodeActionService.class);
 
     @Override
-    public List<Either<Command, CodeAction>> getCodeActions(Options options) {
+    public List<Either<Command, CodeAction>> getCodeActions(Options options, Diagnostic diagnostic) {
 
         Resource resource = options.getResource();
         Document document = options.getDocument();
-        CodeActionParams params = options.getCodeActionParams();
         List<Either<Command, CodeAction>> result = new ArrayList<>();
-        if (params.getContext() != null && params.getContext().getDiagnostics() != null) {
-            for (Diagnostic d : params.getContext().getDiagnostics()) {
-                // TODO replace with actual code check
-                if (INVALID_NAME.equals(d.getCode().get().toString())) {
-                    String text = document.getSubstring(d.getRange());
-                    CodeAction action = new CodeAction();
-                    action.setKind(CodeActionKind.QuickFix);
-                    action.setTitle("Capitalize Name");
-                    action.setDiagnostics(Collections.singletonList(d));
-                    TextEdit textEdit = new TextEdit();
-                    textEdit.setRange(d.getRange());
-                    textEdit.setNewText(text + text);
-                    WorkspaceEdit workspaceEdit = new WorkspaceEdit();
-                    workspaceEdit.getChanges().put(resource.getURI().toString(), List.of(textEdit));
-                    action.setEdit(workspaceEdit);
-                    result.add(Either.forRight(action));
-                }
-            }
+        logger.debug("Processing diagnostic: {}", diagnostic.getMessage());
+        logger.debug("Processing diagnostic: {}", options.getURI());
+        logger.debug("Processing diagnostic: {}", diagnostic.getData().toString());
+        if (AsciiDocValidator.INVALID_NAME.equals(diagnostic.getCode().get().toString())) {
+            String text = document.getSubstring(diagnostic.getRange());
+            CodeAction action = new CodeAction();
+            action.setKind(CodeActionKind.QuickFix);
+            action.setTitle("Duplicate the name");
+            action.setDiagnostics(Collections.singletonList(diagnostic));
+            TextEdit textEdit = new TextEdit();
+            textEdit.setRange(diagnostic.getRange());
+            textEdit.setNewText(text + text);
+            WorkspaceEdit workspaceEdit = new WorkspaceEdit();
+            workspaceEdit.getChanges().put(resource.getURI().toString(), List.of(textEdit));
+            action.setEdit(workspaceEdit);
+            result.add(Either.forRight(action));
         }
         return result;
     }
